<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="horizontal"
    android:gravity="top">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/app_logo"
            android:id="@+id/imageView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing" android:text="@string/companyName"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/text_shadow_white"
            android:id="@+id/address" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/companyemail"
            android:textColor="@color/text_shadow_white"
            android:id="@+id/textView" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textColor="@color/text_shadow_white"
            android:id="@+id/textViews" />
    </LinearLayout>
</LinearLayout>
