<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_register"
    tools:context="com.technorio.inc.bloodbankplus.Register"
    android:background="@drawable/registerback"
    android:fillViewport="false">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="@dimen/toolbarTextSize"
            android:textColor="@color/white"
            android:layout_marginBottom="5dp" />

        <!--first name-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:weightSum="2.0">

            <EditText
                android:id="@+id/fName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="Enter Firstname"
                android:textColorHint="@color/blue_nav"
                android:padding="10dp"
                android:lines="1"
                android:alpha="0.8"
                android:layout_marginRight="3dp"
                android:layout_weight="1.0"
                android:singleLine="true"

                />
            <EditText
                android:id="@+id/lName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="Enter Lastname"
                android:textColorHint="@color/blue_nav"
                android:padding="10dp"
                android:lines="1"
                android:alpha="0.8"
                android:layout_weight="1.0"
                android:layout_marginLeft="3dp"
                android:singleLine="true"
                />

        </LinearLayout>

        <!-- username-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp">



            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_username"
                android:textColorHint="@color/blue_nav"
                android:inputType="text"
                android:padding="10dp"
                android:lines="1"
                android:alpha="0.8"
                android:maxLength="10"
                android:singleLine="true"
                />
        </LinearLayout>
        <!--password-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp">



            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_password"
                android:textColorHint="@color/blue_nav"
                android:inputType="textPassword"
                android:padding="10dp"
                android:lines="1"
                android:alpha="0.8"
                android:maxLength="10"
                android:singleLine="true"
                />
        </LinearLayout>

        <!-- verify password-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp">



            <EditText
                android:id="@+id/edtVpassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_Vpassword"
                android:textColorHint="@color/blue_nav"
                android:inputType="textPassword"
                android:padding="10dp"
                android:lines="1"
                android:alpha="0.8"
                android:singleLine="true"
                />/>
        </LinearLayout>

        <!--phone number-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/phone"
                    android:textColorHint="@color/blue_nav"
                    android:inputType="number"
                    android:padding="10dp"
                    android:lines="1"
                    android:alpha="0.8"
                    android:maxLength="10"
                    android:singleLine="true"
                    />
            </LinearLayout>


        </LinearLayout>
        <!-- email-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp">



            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_email"
                android:textColorHint="@color/blue_nav"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:lines="1"
                android:alpha="0.8"
                android:singleLine="true"
                />
        </LinearLayout>
        <!--date-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/DOB"
                android:textSize="@dimen/textSize"
                android:textColor="@color/light_white"
               android:text="@string/dob"
                android:gravity="center" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_margin="5dp"
                    android:prompt="@string/year"
                    android:id="@+id/year" />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_margin="5dp"
                    android:id="@+id/month" />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_margin="5dp"
                    android:id="@+id/day" />

            </LinearLayout>

        </LinearLayout>

        <!--blood group-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/blood"
                android:padding="10dp"
                android:textSize="@dimen/textSize"
                android:textColor="@color/light_white"
                android:text="@string/bloodGroup"
                android:gravity="center" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:background="@android:color/transparent"
                android:id="@+id/bloodSpinner" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/sex"
                android:textColor="@color/light_white"
                android:textSize="@dimen/textSize"
                android:padding="10dp"
                android:text="@string/sex"
                android:gravity="center" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginLeft="3dp"
                android:id="@+id/sexSpinner" />

        </LinearLayout>
        <!-- Address-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Address"
            android:id="@+id/txtPAddress"
            android:textColor="@color/light_white"
            android:layout_gravity="left"
            android:textSize="@dimen/textSize"
            android:padding="10dp"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:weightSum="2.0">

            <EditText
                android:id="@+id/edtStreet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/street"
                android:textColorHint="@color/blue_nav"
                android:padding="10dp"
                android:lines="1"
                android:alpha="0.8"
                android:layout_marginRight="3dp"
                android:layout_weight="1.0"
                android:singleLine="true"

                />
            <EditText
                android:id="@+id/edtDis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/district"
                android:textColorHint="@color/blue_nav"
                android:padding="10dp"
                android:lines="1"
                android:alpha="0.8"
                android:layout_weight="1.0"
                android:layout_marginLeft="3dp"
                android:singleLine="true"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
android:text="@string/txtterms"
                android:textSize="12dp"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp" />

</LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:layout_marginBottom="10dp"
            >
            <Button
                android:layout_width="match_parent"
                android:background="@drawable/buttontransp"
                android:text="@string/btnRegister"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_height="match_parent"
                android:id="@+id/btnRegister" />
        </LinearLayout>




    </LinearLayout>

</ScrollView>
    </LinearLayout>