<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_menu"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.technorio.inc.bloodbankplus.Menu">
    <!-- image slide -->

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:context="com.daimajia.slider.demo.MainActivity">
        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            custom:pager_animation="Accordion"
            custom:auto_cycle="true"
            custom:indicator_visibility="visible"
            custom:pager_animation_span="1100"
            android:layout_height="200dp"/>

        <com.daimajia.slider.library.Indicators.PagerIndicator
            android:id="@+id/custom_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            custom:selected_color="#0095BF"
            custom:unselected_color="#55333333"

            custom:shape="oval"
            custom:selected_padding_left="5dp"
            custom:selected_padding_right="5dp"
            custom:unselected_padding_left="5dp"
            custom:unselected_padding_right="5dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            custom:selected_width="6dp"
            custom:selected_height="6dp"
            custom:unselected_width="6dp"
            custom:unselected_height="6dp"
            android:layout_marginBottom="20dp"
            />
        <com.daimajia.slider.library.Indicators.PagerIndicator
            android:id="@+id/custom_indicator2"
            style="@style/AndroidImageSlider_Corner_Oval_Orange"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            />


    </RelativeLayout>
    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/relativeTextview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >
            <android.support.v4.view.ViewPager
                android:id="@+id/reviewpager"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />
        </LinearLayout>
    </LinearLayout>-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_gravity="center">
        <!--content of the menu-->
        <!--sliding image-->



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_margin="10dp"><![CDATA[


            />
            ]]><!-- register button-->
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:text="@string/btnRegister"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:textColor="@color/white"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textSize="@dimen/btnTextSize"
                />

            <!-- emergency Number-->
            <Button
                android:id="@+id/btnEmergency"
                android:layout_width="match_parent"
                android:text="@string/emergency"
                android:background="@drawable/button"
                android:textColor="@color/white"
                android:textSize="@dimen/btnTextSize"
                android:layout_height="match_parent"
                android:textStyle="bold" />
            <!--about us-->
            <Button
                android:id="@+id/btnAbout"
                android:layout_width="match_parent"
                android:text="@string/about"
                android:background="@drawable/button"
                android:textSize="@dimen/btnTextSize"
                android:textColor="@color/white"
                android:layout_height="match_parent"
                android:textStyle="bold" />
            <Button
                android:id="@+id/btnMessage"
                android:layout_width="match_parent"
                android:text="Message"
                android:background="@drawable/button"
                android:textSize="@dimen/btnTextSize"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:layout_height="match_parent"
                android:textStyle="bold" />

         <!--<Button-->
             <!--android:layout_width="match_parent"-->
             <!--android:layout_height="match_parent"-->
             <!--android:background="@android:color/transparent"/>-->

        </LinearLayout>
    </ScrollView>

</LinearLayout>






